app/assets/stylesheets/restaurants.scss
// Place all the styles related to the restaurants controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
@import 'components/jumbottron.scss';
@import 'components/cardsindex.scss';

.plans-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 10px;

}

.plans-container h1 {
  display: inline-block;
  border-bottom: 2px solid grey;
  padding-bottom:5px;
  font-weight:bold;
}

.plans-container.plan-box {
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
}


.card-category {
  font-size: 15px;
  display: flex;
  flex-direction: column;
  text-align: center;
  justify-content: center;
  color: #4C4C4C;
  transition: all 0.3s ease-in-out;
  padding: 20px;
  &:hover {
    // box-shadow: 1px 1px 2px rgba(0,0,0,0.15);
    transform: scale(1.05, 1.05);
  }
}

.card-category h4 {
  font-weight:bold;
  margin-bottom: 20px;
}

.card-prix {
  font-size: 12px;
  display: flex;
  text-align: center;
  justify-content: center;
  margin-top: 10px;
  padding: 5px;
  flex-direction: column;
}

.card-prix p{
  margin: 3px;
  color: black;
  font-weight: bold;

}

.btn-sub {
  color: white;

  padding: 5px 5px;
  font-weight: bold;
  background: #00D4B7;
  transition: background 0.5s ease;
}

.btn-sub:hover {
  opacity: 1;
  background: #00D4B7;
  text-decoration: none;
  color: black;
}

.form-inline {
  margin-left: 0px;
  margin-bottom: 10px;
}

.tableau {
  margin-top: 35px;
}

.style_image {
  width: 260px;
  height: 180px;
  display: flex;
  text-align: center;
  justify-content: center;
  flex: 0 0 20%;
}

.wrapper-meals {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-direction: column;
}

